NH-66560: run IDE clean up